<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColor"
    tools:context=".AuthActivity">

    <FrameLayout
        android:id="@+id/backgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/themeBackgroundColor"> <!-- Основной градиент -->

        <!-- Пятно 1 -->
        <View
            android:id="@+id/spot1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="top|end"
            android:background="@drawable/oval_blue_gradient" />

        <!-- Пятно 2 -->
        <View
            android:id="@+id/spot2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/oval_orange_gradient" />

        <View
            android:id="@+id/spot3"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="bottom|start"
            android:background="@drawable/oval_violet_gradient" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/btnSettingsStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:backgroundTint="@color/blue_primary"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            app:drawableEndCompat="@drawable/baseline_settings_24"
            app:drawableTint="?attr/themeAccentColor"
            android:textSize="30sp"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="125dp"
            android:background="@drawable/icon_bg"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="15dp"
                android:background="@mipmap/emotionme_v11" />
        </FrameLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/field_light"
            android:backgroundTint="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="5dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </FrameLayout>


            <EditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@drawable/cursor_color"
                android:background="@drawable/field_light"
                android:hint="@string/hint_login"
                android:padding="20dp"
                android:inputType="text"
                android:autofillHints="name"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textCursorDrawable="@drawable/cursor_color"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:background="@drawable/field_dark"
                app:layout_constraintTop_toTopOf="@id/etLogin"
                android:autofillHints="password"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="?attr/themeAccentColor"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            app:cornerRadius="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/info1"
            android:textColor="@color/dark_grey"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>