<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/themeBackgroundColor"
    tools:context=".PasswordActivity">

    <FrameLayout
        android:id="@+id/backgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/themeBackgroundColor"> <!-- Основной градиент -->

        <!-- Пятно 1 -->
        <View
            android:id="@+id/spot1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="top|end"
            android:background="@drawable/oval_blue_gradient" />

        <!-- Пятно 2 -->
        <View
            android:id="@+id/spot2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center|start"
            android:background="@drawable/oval_orange_gradient" />

        <View
            android:id="@+id/spot3"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="bottom|start"
            android:background="@drawable/oval_violet_gradient" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/field_frame_2"
        android:backgroundTint="?attr/themeAccentColor"
        android:paddingTop="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="17dp"
            android:text="@string/screen_password"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnBackPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="12dp"
            android:backgroundTint="@color/blue_primary"
            android:gravity="center"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:drawableEndCompat="@drawable/outline_arrow_back_ios_new_24"
            app:drawableTint="@color/white" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field_light"
            android:hint="@string/hint_current_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/field_light"
            android:hint="@string/hint_confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/hint_to_user_password"
            android:textColor="@color/dark_grey"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSavePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="?attr/themeAccentColor"
            android:text="@string/btn_save_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="15dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>