<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/themeBackgroundColor"
    tools:context=".SettingsActivity">

    <!-- Анимированный фон -->
    <FrameLayout
        android:id="@+id/backgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/themeBackgroundColor">

        <View
            android:id="@+id/spot1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="top|end"
            android:background="@drawable/oval_blue_gradient" />

        <View
            android:id="@+id/spot2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@drawable/oval_orange_gradient" />

        <View
            android:id="@+id/spot3"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="bottom|start"
            android:background="@drawable/oval_violet_gradient" />
    </FrameLayout>

    <!-- Header -->
    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/field_frame_2"
        android:backgroundTint="?attr/themeAccentColor"
        android:paddingTop="27dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/settingsTitleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="17dp"
            android:text="@string/screen_settings"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/outline_arrow_back_ios_new_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:drawableTint="@color/white" />
    </FrameLayout>

    <!-- Контент -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="77dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Уведомления -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/field_light"
                android:padding="10dp">

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/notification_switcher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@string/notifications"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </FrameLayout>

            <!-- Время уведомлений -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:padding="10dp"
                android:background="@drawable/field_light">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/notification_time"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TimePicker
                        android:id="@+id/time_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:amPmTextColor="@color/black"
                        android:theme="@style/TimePickerTheme"
                        android:timePickerMode="spinner" />
                </LinearLayout>
            </FrameLayout>

            <!-- Цветовая тема -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/field_light"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:text="@string/label_theme"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/themeRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>
            </FrameLayout>

            <!-- Язык -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/field_light"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:gravity="center"
                        android:text="@string/label_language"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/langRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" />
                </LinearLayout>
            </FrameLayout>

            <!-- Мои ответы на анкету -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="?attr/themeAccentColor"
                android:text="@string/btn_answers"
                android:textColor="@color/white"
                app:cornerRadius="15dp" />

            <!-- Изменить пароль -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPasswordActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/black"
                android:text="@string/btn_password_change"
                android:textColor="@color/white"
                android:textStyle="normal"
                app:cornerRadius="15dp" />

            <!-- Выйти -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/btn_logout"
                android:textColor="#F00"
                android:textStyle="normal"
                app:cornerRadius="15dp" />

            <!-- Версия -->
            <TextView
                android:id="@+id/versionTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/app_version"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal"
                android:alpha="0.7"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>